added basic miner node

--- a/game.conf
+++ b/game.conf
@@ -1,4 +1,4 @@
-name = industrial_test
+name = factorized
 description = A technology mod that adds different machines for automation!
 author = KanneraZh, Dani-0TB
-title = Industrial Test Mod
+title = Factorized Mod
